# aggregation-for-caesar

./: .coveragerc  .dockerignore  .env.template  .flake8  .gitignore  .travis.yml  Contributing.md  Dockerfile  Dockerfile.bin_cmds  GUI.md  Jenkinsfile  LICENSE  MANIFEST.in  README.md  Scripts.md  bin_cmds.Dockerfile  build_mac.spec  build_mac_universal2.spec  build_win.spec  caesar_reducers_wsgi.py  docker-compose.local_scripts.yml  docker-compose.yml  endpoints.yml.template  mac_app_link_files.sh  make_docs.sh  pyproject.toml  requirements.txt  routes.py  routs.py  service.yaml  setup.cfg  setup.py  sklearn_handler.py  start-flask.sh  zappa_settings.json
.github/: dependabot.yml
.github/workflows/: build-executables-pyinstaller.yml  build-executables.yml  codeql-analysis.yml  coverage.yml  deploy_app.yml  deploy_batch.yml  deploy_production.yml  deploy_staging.yml  flake8.yml  nuitka-build.yml  pdm_update.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-versions.yml  pythontests.yml
data/: doorkeeper-jwt-production.pub  doorkeeper-jwt-staging.pub
doc/: Makefile
doc/source/: conf.py  index.rst
docs/: .buildinfo  extractros.html  genindex.html  index.html  objects.inv  py-modindex.html  reducers.html  search.html  searchindex.js
docs/_sources/: extractros.rst.txt  reducers.rst.txt
docs/source/: Collaborative workflow.ipynb  Contributing.md  GUI.md  Gravity_Spy.rst  How_Clustering_Works.ipynb  Scripts.md  Task_lookup_table.rst  conf.py  extractors.rst  extractros.rst  index.rst  panoptes.rst  reducers.rst  running_reducers.rst
docs/source/_static/: cat-project-classifications.csv  cat-project-subjects.csv  cat_project_extractor_config.yaml  cat_project_reducer_config.yaml  cat_project_reducer_contours_config.yaml  polygon_extractor_extractions.csv  polygon_reducer_contours_reductions.csv  polygon_reducer_reductions.csv  polygon_reducer_reductions_intersection.csv  polygon_reducer_reductions_median.csv  polygon_reducer_reductions_union.csv
doctrees/: environment.pickle  extractros.doctree  index.doctree  reducers.doctree
extractors/: __init__.py  point_extractor.py
kubernetes/: deployment-batchagg.tmpl  deployment-production.tmpl  deployment-staging.tmpl  deployment-staging.yaml  deployment.tmpl
panoptes_aggregation/: __init__.py  append_version.py  batch_aggregation.py  copy_function.py  csv_utils.py  feedback_strategies.py  flatten_data.py  routes.py  shape_tools.py  tasks.py  workflow_config.py
panoptes_aggregation/extractors/: README.md  __init__.py  all_tasks_empty_extractor.py  bezier_extractor.py  dropdown_extractor.py  extractor_wrapper.py  filter_annotations.py  free_hand_line_extractor.py  freehand_line_extractor.py  freehand_line_extractor2.py  i2a_extractor.py  line_text_extractor.py  nfn_extractor.py  pluck_and_split_extractor.py  pluck_extractor.py  point_extractor.py  point_extractor_by_frame.py  point_extractor_temporal.py  poly_line_text_extractor.py  polygon_extractor.py  question_extractor.py  rectangle_extractor.py  shape_extractor.py  shortcut_extractor.py  slider_extractor.py  subtask_extractor_wrapper.py  survey_extractor.py  survey_whitelist_extractor.py  sw_extractor.py  sw_graphic_extractor.py  sw_variant_extractor.py  test_utils.py  text_extractor.py  tool_wrapper.py  utilities.py  workflow_extractor_config.py
panoptes_aggregation/panoptes/: __init__.py  userify.py
panoptes_aggregation/reducers/: README.md  __init__.py  angle_avg.py  angle_utils.py  cluster_points.py  collab_wrapper.py  dropdown_reducer.py  first_n_false_reducer.py  first_n_true_reducer.py  optics_line_text_reducer.py  optics_text_utils.py  point_process_data.py  point_reducer.py  point_reducer_dbscan.py  point_reducer_hdbscan.py  poly_line_text_reducer.py  polygon_reducer.py  polygon_reducer_contours.py  polygon_reducer_utils.py  process_kwargs.py  question_consensus_reducer.py  question_reducer.py  rectangle_reducer.py  reducer_wrapper.py  shape_metric.py  shape_metric_IoU.py  shape_normalization.py  shape_process_data.py  shape_reducer_dbscan.py  shape_reducer_hdbscan.py  shape_reducer_optics.py  shortcut_reducer.py  slider_reducer.py  subject_difficulty_reducer.py  subtask_reducer_wrapper.py  survey_reducer.py  sw_reducer.py  sw_variant_reducer.py  temporal_point_reducer_dbscan.py  temporal_point_reducer_hdbscan.py  (+8 more)
panoptes_aggregation/running_reducers/: __init__.py  gravity_spy_subject_reducer.py  gravity_spy_user_reducer.py  running_reducer_wrapper.py  tess_gold_standard_reducer.py  tess_reducer_column.py  tess_user_reducer.py  test_custom_reducer.py  utilities.py
panoptes_aggregation/scripts/: __init__.py  aggregation_parser.py  batch_utils.py  config_workflow_panoptes.py  extract_panoptes_csv.py  gui.py  gui_overrides.py  no_gooey.py  path_type.py  reduce_panoptes_csv.py
panoptes_aggregation/scripts/icons/: program_icon.icns
panoptes_aggregation/tests/batch_aggregation/: cls_export.csv  test_batch_aggregation.py  wf_export.csv
panoptes_aggregation/tests/extractor_tests/: base_test_class.py  kenisis_points.json  test_all_tasks_empty_extractor.py  test_bezier_extractor.py  test_dropdown_extractor.py  test_dropdown_extractor_v2.py  test_filter_annotations.py  test_i2a_extractor.py  test_line_text_extractor.py  test_line_text_extractor_v2.py  test_nfn_extractor.py  test_pluck_and_split_extractor.py  test_point_extractor.py  test_point_extractor_by_frame.py  test_poly_line_text_extractor.py  test_poly_line_text_extractor_by_line.py  test_polygon_extractor.py  test_question_extractor.py  test_rectangle_extractor.py  test_shape_extract_temporal_rotate_rectangle.py  test_shape_extractor.py  test_shape_extractor_circle.py  test_shape_extractor_column.py  test_shape_extractor_ellipse.py  (+21 more)
panoptes_aggregation/version/: __init__.py
reducers/: __init__.py  cluster_points.py  process_kwargs.py
scripts/: mac_app_link_files.sh  make_docs.sh  start-celery.sh  start-flower.sh
tests/: test_cluster_points.py
tests/extractor_tests/: kenisis_points.json  test_point_extractor.py
tests/reducer_tests/: test_cluster_points.py  test_process_kwargs.py
(+88 files in other folders)
