[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "panoptes_aggregation"
description = "Aggregation code for Zooniverse panoptes projects."
authors = [
    {name = "Coleman Krawczyk", email = "coleman@zooniverse.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]
requires-python = ">=3.9,<3.14"
dependencies = [
    "beautifulsoup4>=4.8.1,<4.13",
    "collatex>=2.3,<2.4",
    "lxml>=4.4,<5.4",
    "numpy>=1.26.4,<2.3",
    "packaging>=20.1,<24.3",
    "pandas>=2.0",
    "progressbar2>=3.39,<4.6",
    "python-levenshtein>=0.21.0,<0.27",
    "python-slugify>=7.0.0,<8.1",
    "pyyaml>=6.0,<6.1",
    "scikit-learn>=1.3.2,<1.7",
    "scipy>=1.10.0",
    "werkzeug>=2.3.0,<3.2",
    "shapely>=2.0,<2.1",
    "contourpy>=1.3.0,<1.4.0",
    "shapelysmooth>=0.2.0,<1.0",
]

[project.optional-dependencies]
online = [
    "azure-identity>=1,<2",
    "azure-storage-blob>=12,<13",
    "celery>=5.3,<5.5",
    "redis>=5,<6",
    "flower>2,<3",
    "flask>=2.3,<3.2",
    "flask-cors>=3.0,<5.1",
    "panoptes-client>=1.6,<1.7",
    "requests>=2.28,<2.33",
    "gunicorn>=20.0,<24.0",
    "sentry-sdk[flask]>=2.19,<2.20",
    # to work on python >= 3.12 panoptes-client needs
    # setuptools and standard-imghdr installed directly
    # as they are no longer in the standard python build
    "setuptools>=75.8,<76.0",
    "standard-imghdr>=3.13,<4.0",
    "newrelic>=8.4.0,<10.4",
    "gitpython>=3.0.0,<3.2"
]
gui = [
    "Gooey>=1.0.8.1,<1.1"
]
doc = [
    "matplotlib>=3.5.1,<4.0",
    "myst-nb>=0.13.2,<2.0",
    "sphinx>=5.2.0,<7.5",
    "sphinxcontrib-httpdomain>=1.7.0,<1.9",
    "sphinx_rtd_theme>=0.4.3,<4.0"
]
test = [
    "coverage>=4.5.3,<7.7",
    "coveralls>=3.0.0,<4.1",
    "flake8>=7.0,<7.2",
    "flake8-black>=0.3.4,<0.4",
    "flake8-bugbear>=23.5,<24.11",
    "pytest>=7.1.2,<8.4",
    "pytest-subtests>=0.10.0,<0.14"
]
installer = [
    "pip-licenses>=5.0",
    "nuitka>=2.6.8"
]

[project.scripts]
panoptes_aggregation = "panoptes_aggregation.scripts.aggregation_parser:main"

[project.gui-scripts]
panoptes_aggregation_gui = "panoptes_aggregation.scripts.gui:gui"

[project.urls]
Documentation = "https://aggregation-caesar.zooniverse.org/docs"
Source = "https://github.com/zooniverse/aggregation-for-caesar"

[tool.flit.sdist]
include = [
    "panoptes_aggregation/scripts/icons/*",
    "LICENSE"
]
exclude = [
    "docs/",
    "kubernetes",
    "scripts/make_docs.sh"
]

[tool.coverage.run]
omit = [
    "*test*",
    "panoptes_aggregation/scripts/gui*.py",
    "panoptes_aggregation/scripts/no_gooey.py",
    "panoptes_aggregation/scripts/path_type.py"
]
source = ["panoptes_aggregation"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
